# cars_django

./: README.md  carros_uwsgi.ini  db.sqlite3  pyproject.toml  requirements.txt
accounts/: views.py
accounts/templates/: login.html  register.html
app/: settings.py  urls.py
app/templates/: base.html  new_car.html
cars/: admin.py  forms.py  index.html  models.py  pendencias.txt  signals.py  views.py
cars/migrations/: 0001_initial.py  0002_brand_alter_car_brand.py  0003_car_photo_car_plate.py  0004_carinventory.py  0005_car_bio.py
cars/templates/: car_detail.html  cars.html  new_car.html
