[tool.poetry]
name = "carros"
version = "0.1.0"
description = ""
authors = ["paulomorenodev <23208589@aluno.univesp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
pillow = "^10.4.0"
openai = "^1.45.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = 'python manage.py runserver'
